change directory configrations

--- a/.gitignore
+++ b/.gitignore
@@ -5,15 +5,15 @@
 #   git config --global core.excludesfile '~/.gitignore_global'
 
 # Ignore bundler config.
-/.bundle
+/baukis/.bundle
 
 # Ignore the default SQLite database.
-/db/*.sqlite3
-/db/*.sqlite3-journal
+/baukis/db/*.sqlite3
+/baukis/db/*.sqlite3-journal
 
 # Ignore all logfiles and tempfiles.
-/log/*.log
-/tmp
+/baukis/log/*.log
+/baukis/tmp
 
 # Ignore baukis answers.
 /baukis-answers
